--- a/www/css/global.css
+++ b/www/css/global.css
@@ -39,7 +39,7 @@ body {
     width: 90%;
     margin: 0 auto;
     margin-top: 20px;
-    padding: 20px 0;
+    padding: 20px;
     background: linear-gradient(to top, rgb(55, 53, 97), rgb(169, 171, 188));
     border-radius: 50px 50px 0 0;
     border: 5px solid rgb(33, 30, 76);
@@ -47,6 +47,24 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+}
+
+.button {
+    width: 250px;
+}
+
+.button input {
+    width: 100%;
+    height: 74px;
+    border-radius: 22px;
+    font-size: 36px;
+    font-weight: bold;
+    color: rgb(33, 30, 76);
+    background-image: url(../img/rectangle_option.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    border: none;
+    outline: none;
 }
 
 footer {
@@ -73,55 +91,9 @@ footer .exit {
 
 .footer {
     margin: auto;
-    margin-top: -3%;
+    margin-top: -4%;
     width: 92%;
     height: 3%;
     border-radius: 100%;
     background: rgb(33, 30, 76);
-}
-
-
-.button {
-    width: 90%;
-    position: relative;
-}
-
-.button input {
-    width: 100%;
-    height: 80px;
-    margin: 20px 0;
-    border-radius: 35px;
-    border: 5px solid rgb(33, 30, 76);
-    background: linear-gradient(to top, rgb(200, 200, 200), white);
-    font-size: 36px;
-    font-weight: bold;
-    color: rgb(33, 30, 76);
-}
-
-.point_one, .point_two, .point_three, .point_four {
-    background: rgb(33, 30, 76);
-    border-radius: 10px;
-    width: 10px;
-    height: 10px;
-    position: absolute;
-}
-
-.point_one {
-    top: 29%;
-    left: 7%;
-}
-
-.point_two {
-    bottom: 29%;
-    left: 7%;
-}
-
-.point_three {
-    top: 29%;
-    right: 7%;
-}
-
-.point_four {
-    bottom: 29%;
-    right: 7%;
 }
