--- a/www/html/game_rp/views/main.html
+++ b/www/html/game_rp/views/main.html
@@ -17,9 +17,12 @@
     </script>
 </head>
 <body>
-
 <p class="main_tittle">Adivina La Pelicula!</p>
-<div class="container-game" id="container">
+<div id="score" class="principal-font">
+</div>
+<div style="font-size: 20px" class="score-escene principal-font" id="escene">
+</div>
+<div style="font-size: 20px" class="container-game principal-font" id="container">
 </div>
 </body>
 </html>
