--- a/www/css/game_rp/game.css
+++ b/www/css/game_rp/game.css
@@ -16,8 +16,12 @@
     display: flex;
     height: 140px;
     width: 50%;
+    max-width: 250px;
     justify-content: center;
     align-items: center;
+    color: rgb(33, 30, 76);
+    font-size: 30px;
+    font-weight: bold;
     background-image: url(/games-platforms/www/img/square_option.png);
     background-position: center;
     background-size: 100% 140px;
@@ -29,4 +33,50 @@
     border: none;
     outline: none;
     max-width: 100%;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    justify-content: center;
+    align-items: center;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    text-align: center;
+    color: rgb(33, 30, 76);
+    font-size: 30px;
+    font-weight: bold;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    width: 80%; /* Could be more or less, depending on screen size */
+    background-image: url(/games-platforms/www/img/square_option.png);
+    background-position: center;
+    background-size: 100% 140px;
+    background-repeat: no-repeat;
+}
+
+.bottom {
+    display: flex;
+    height: 100px;
+    width: 40%;
+    max-width: 250px;
+    margin-top: 20px ;
+    margin-left: 50%;
+    align-items: center;
+    justify-content: center;
+    background-image: url(/games-platforms/www/img/square_option.png);
+    background-position: center;
+    background-size: 70% 80px;
+    background-repeat: no-repeat;
+    transform: translate(-50%);
 }
