--- a/www/css/game_pb_mm/homepb.css
+++ b/www/css/game_pb_mm/homepb.css
@@ -13,3 +13,11 @@
 .code {
     margin-top: 20px;
 }
+
+.good{
+    background: rgb(150, 255, 150);
+}
+
+.bad{
+    background: rgb(255, 150, 150);
+}
