Juego Terminado, terminar acoplamiento

--- a/www/html/game_rp/views/game.html
+++ b/www/html/game_rp/views/game.html
@@ -47,5 +47,10 @@
     <div class="bottom">
         <input style="font-size: 18px" type="button" value="Siguiente!" onclick="cambiarEscena()" class="input-answer principal-font">
     </div>
+    <div id="final" class="modal">
+        <div class="modal-content">
+            <p id="fscore"></p>
+        </div>
+    </div>
 </body>
 </html>
