Correcciones del nivel uno

--- a/www/css/game_tp_ss/game_tp_ss.css
+++ b/www/css/game_tp_ss/game_tp_ss.css
@@ -7,7 +7,9 @@
     color: aliceblue;
   }
   .total_content{
+    position: absolute;
     width: 100%;
+    height: 100%;
     background-color: #fff;
     opacity: 0.6;
   }
