--- a/www/css/game_tp_ss/game_tp_ss.css
+++ b/www/css/game_tp_ss/game_tp_ss.css
@@ -1,58 +1,168 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+  box-sizing: border-box;
+  color: aliceblue;
+}
 
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Silkscreen', 'cursive';
-    font-weight: bold;
-    box-sizing: border-box;
-    color: aliceblue;
+.total_content {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  opacity: 0.8;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.information_level {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: #221f4d;
+  opacity: 0.8;
+  flex-direction: column
+}
+
+@keyframes go-left-right {
+  from {
+    left: 30%;
   }
-  body{
-    height: 100vh;
-    background: linear-gradient(to top, rgb(55, 53, 97), rgb(169, 171, 188));
+
+  to {
+    left: 50%;
   }
-  .header{
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #221f4d;
-    height: 5em;
+
+  /* animar a la izquierda 50%*/
+}
+
+@keyframes go-right-left {
+  from {
+    top: 30%;
+    left: 30%;
   }
-  
-  .score{
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1em;
-    padding-top: 4em;
+
+  to {
+    top: 50%;
+    left: 30%;
   }
-  
-  .image{
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #f2fbfd;
-    border-radius: 1em;
-    padding: 1em;
-    margin: 1em;
+
+  /* animar abajo:50%*/
+}
+
+@keyframes go-aument {
+  from {
+    width: 198px;
+    height: 288px;
+    left: 20%;
   }
-  .garden {
-      position: relative;
-      width : 200px;
-      height: 200px;
-      border: 5px solid #CCC;
-      border-radius: 10px;
-    }
-    
-    .ball {
-      position: absolute;
-      top   : 90px;
-      left  : 90px;
-      width : 20px;
-      height: 20px;
-      background: green;
-      border-radius: 100%;
-    }
+
+  to {
+    width: 298px;
+    height: 388px;
+    left: 20%;
+  }
+
+  /* aumentar imagen */
+}
+
+.img1 {
+  animation: go-left-right 2s infinite alternate;
+  position: fixed;
+}
+
+.img2 {
+  animation: go-right-left 2s infinite alternate;
+  position: fixed;
+}
+
+.img3 {
+  animation: go-aument 2s infinite alternate;
+  position: fixed;
+}
+
+
+body {
+  height: 100vh;
+  background: linear-gradient(to top, rgb(55, 53, 97), rgb(169, 171, 188));
+}
+
+.header {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #221f4d;
+  height: 5em;
+}
+
+.score {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1em;
+  padding-top: 4em;
+
+}
+
+.score_finish {
+  background-image: url("../../img/game_tp_ss/gifFinish.gif");
+  margin: 0;
+  height: 280px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1em;
+  margin: 1em;
+  flex-wrap: wrap;
+  opacity: 0.8;
+  flex-direction: column;
+}
+
+.score_container {
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  color: #221f4d !important;
+}
+
+.image {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f2fbfd;
+  border-radius: 1em;
+  padding: 1em;
+  margin: 1em;
+}
+
+.garden {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border: 5px solid #CCC;
+  border-radius: 10px;
+}
+
+.sound {
+  width: 60px;
+  height: 60px;
+  background-image: url("../../img/square_option.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-left: 42%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sound img {
+  width: 30px;
+}
