--- a/www/css/game_vv/game_vv.css
+++ b/www/css/game_vv/game_vv.css
@@ -1,17 +1,23 @@
 body{
     margin: 0px;
+    background: #B4BEC9;
+    display: flex;  
 }
 
 #board{
-    width: 100%;
-    height: 600px;
+    display: flex;
+    top: 100px;
+    width: 600px;
+    height: 300px;
     position: relative;
+    border: 2px solid black;
+    margin: auto;
 }
 
 #jugador{
     width: 70px;
     height: 70px;
-    bottom: 190px;
+    bottom: 90px;
     position: absolute;
     left: 20px;
 }
@@ -39,7 +45,7 @@ body{
     position: absolute;
     width: 70px;
     height: 70px;
-    bottom: 190px;
+    bottom: 90px;
     right: 0%;
     animation: movimientoObstaculo 2s linear infinite;
 }
@@ -62,11 +68,11 @@ body{
 
 @keyframes saltar {
     0%{
-        bottom: 190px;
+        bottom: 90px;
 
     }
     40%,60%{
-        bottom: 320px;
+        bottom: 220px;
     }
     
     
